image extension changed

--- a/web_projects.html
+++ b/web_projects.html
@@ -199,7 +199,7 @@
 										
 									  </div>
 									  <div class="carousel-item" data-bs-interval="5000">
-										<img src="images/project_images/Web project/featured_disease.JPG" class="d-block w-100" alt="...">
+										<img src="images/project_images/Web project/featured_disease.jpg" class="d-block w-100" alt="...">
 										
 									  </div>
 									  <div class="carousel-item" data-bs-interval="5000">
