Added Get-Easy-Food project

--- a/front-end_projects.html
+++ b/front-end_projects.html
@@ -140,6 +140,96 @@
                         </div>
 
                     </section>
+
+
+                    <section id="two">
+
+                        <div class="container">
+
+                            <h3>2. <a style="text-decoration: underline;" href="https://get-easy-food.firebaseapp.com/">Get Easy Food</a></h3>
+
+                            <div id="carouselExampleDark5" style="box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="6000">
+                                        <img src="images/project_images/Front-end project/FoodHome.JPG" class="d-block w-100" alt="...">
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodNavbar.JPG" class="d-block w-100" alt="...">                                   
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodAbout.JPG" class="d-block w-100" alt="...">
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodMenu.JPG" class="d-block w-100" alt="...">
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodPopular.JPG" class="d-block w-100" alt="...">
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodPopularAnimation.jpg" class="d-block w-100" alt="...">
+                                    </div>
+
+                                    <div class="carousel-item" data-bs-interval="5000">
+                                        <img src="images/project_images/Front-end project/FoodGallery.jpg" class="d-block w-100" alt="...">                                   
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="images/project_images/Front-end project/FoodOrder.JPG" class="d-block w-100" alt="...">
+                                    </div>
+                                    
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark5" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark5" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+
+                            </div>
+
+                            <p style="font-weight: 500; color: rgb(51, 48, 48);"><br>Get-Easy-Food is an online food ordering site where users can see different types of food manus and various popular dishes. It is a front-end-based project and was created using Html, CSS, JavaScript, and JQuery, so there is no back-end in this project.</p>
+                            <br>
+                            <h4>2.1 Technology used</h4>
+                            <p style="font-weight: 500;">Mainly used Html, CSS, JavaScript, and JQuery to create this project</p>
+                            
+                            <h4>2.2 Features</h4>
+                            <ul>
+                                <li>Users Can find animation effects in each section.</li>
+                                <li>Users can see different types of food manus and various popular dishes.</li>
+                                <li>In the about-us section, users can see an animated person.</li>
+                                <li>This is created using SVG animation with CSS styling.</li>
+                                <li>In the menu section, dishes are divided into four sections, Breakfast, Lunch, Dinner, and Dessert. </li>
+                                <li>In the popular section, the 3D animation effect is added using Vanilla JavaScript.</li>
+                                <li>When the mouse enters the card, the animation effect starts, and the card responds according to the mouse pointer.</li>
+                                <li>More dishes are added in the gallery section.</li>
+                                <li>An order form is created.</li>
+                                <li>Finally deployed to Firebase.</li>
+                            </ul>
+                            <br>
+
+                            <h4><i class="fa fa-github"></i> Source Code (Github): <a style="text-decoration: underline;" href="https://github.com/BarunBlog/Get-Easy-Food">Get Easy Food</a></h4>
+                            <h4><img style="width: 19px;" src="https://www.vectorlogo.zone/logos/firebase/firebase-icon.svg" alt=""> Live Demo (Firebase): <a style="text-decoration: underline;" href="https://get-easy-food.firebaseapp.com/">Get Easy Food</a></h4>
+
+                        </div>
+
+                    </section>
                 </div>
                 <!-- Footer -->
 					<section id="footer">
