--- a/front-end_projects.html
+++ b/front-end_projects.html
@@ -189,7 +189,7 @@
                                     </div>
 
                                     <div class="carousel-item">
-                                        <img src="images/project_images/Front-end project/FoodOrder.JPG" class="d-block w-100" alt="...">
+                                        <img src="images/project_images/Front-end project/FoodOrder.jpg" class="d-block w-100" alt="...">
                                     </div>
                                     
                                 </div>
