Updated with latest data

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</header>
 									<p>Enthusiastic Computer Science & Engineering graduate with an emphasis on Python, Django, and JavaScript-based software development. Dedicated to implementing new strategies and improving software quality.<br/>
 
-										In these four years of my graduate life, I have learned different types of programming languages like C, C++, Python, and Java. Used these languages to solve different problem sets, implement different data structures and algorithms. Participated in lots of online and onsite programming contests. Learned OOP using both Java and Python, databases like MySQL, PostgreSQL. Also learned web technologies like HTML, CSS, JavaScript, ReactJs Bootstrap, Node.js, Django, etcetera.<br/>
+										In these four years of my undergraduate life and a year of my professional life, I have learned different types of programming languages like C, C++, Python, and Java. Used these languages to solve different problem sets, implement different data structures and algorithms. Participated in lots of online and onsite programming contests. Learned OOP using both Java and Python, databases like MySQL, PostgreSQL. Also learned web technologies like HTML, CSS, JavaScript, ReactJs Bootstrap, Node.js, Django, etcetera.<br/>
 										
 										Now I am practicing Django, Django Rest Framework, and ReactJs for developing web-based applications. </p>
 								</div>
@@ -165,8 +165,8 @@
 							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<h4>9-Pulerpar, Lamabazar, Sylhet</h4>
-									<p><br><a href="mailto:bhattacharjeebarun25@gmail.com">bhattacharjeebarun25@gmail.com</a><br>+8801745673749</p>
+									<h4>Road-5, Block-B, Bashundhara, Dhaka, Bangladesh</h4>
+									<p><br><a href="mailto:bhattacharjeebarun25@gmail.com">bhattacharjeebarun25@gmail.com</a><br>+8801713300488</p>
 								
 								</div>
 							</section>
